--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -47,4 +47,10 @@ spring.redis.pool.min-idle=0
 # 连接超时时间（毫秒）
 spring.redis.timeout=0
 
+spring.mail.host=smtp.qq.com
+spring.mail.username=1484834931@qq.com
+spring.mail.password=ghmjmozpkshbffdg
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
 
