--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,6 +15,8 @@ server.port=8080
 
 
 logging.level.org.springframework=DEBUG
+
+spring.jpa.show-sql= true
 #springboot   mybatis
 #jiazai mybatis peizhiwenjian
 mybatis.mapper-locations = classpath:mapper/*Mapper.xml
